k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ethos-go
  labels:
    name: ethos-go
    environment: production
    app: ethos-go
